# jupyter_functions_exec

./: .gitattributes  .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: python-publish.yml
.venv312/: pyvenv.cfg
src/: lib.rs
src/tests/: black_box.rs  common.rs  gray_box.rs  mod.rs  white_box.rs
tests/fixtures/: complex_notebook.ipynb  empty_notebook.ipynb  only_imports_notebook.ipynb  test_notebook.ipynb
