[build-system]
requires = ["maturin>=1.7"]
build-backend = "maturin"

[project]
name = "jupyter_functions_exec"   # nombre del paquete en PyPI
version = "0.1.0"
description = "Clase rápida para trabajar con notebooks"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Tu Nombre", email = "mail@example.com"}]

[tool.maturin]
module-name = "jupyter_functions_exec"  # debe coincidir con él lib.name de Cargo.toml